Fix: global-menu-tree 구현

--- a/src/global.css
+++ b/src/global.css
@@ -34,7 +34,12 @@
 }
 
 /* Reset some default browser style */
-* {
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after{
   box-sizing: border-box;
 }
 
