fix: 참조 이미지 리팩토링

--- a/src/login.css
+++ b/src/login.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  background: url("../public/images/login-bg.png") no-repeat center;
+  background: url("/images/login-bg.png") no-repeat center;
   background-size: cover;
   display: flex;
   justify-content: center;
