fix: 적용 폰트 정리

--- a/src/login.css
+++ b/src/login.css
@@ -28,8 +28,8 @@ h1.login-ci > .login-slogan {
   color: rgba(255,255,255,0.8);
   display: block;
   font-size: 14px;
-  font-family: Pretendard, serif;
-  font-weight: 400;
+  font-family: var(--font-fmaily), serif;
+  font-weight: var(--font-weight-normal);
 }
 
 .login-form-wrapper {
