--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,12 @@
 /* Global variables */
 :root {
+  --font-fmaily: Pretendard, Arial;
+  --font-weight-normal: 500;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
+  --font-size-default: 14px;
+  --font-size-small: 13px;
+
   --body-surface-color: #f4f5f6;
   --sidebar-surface-color: #20293a;
   --primary-color: #2f3136;
@@ -46,7 +53,7 @@ html {
 html, body {
   padding: 0;
   margin: 0;
-  font-family: Pretendard, Arial, serif;
-  font-weight: 400;
-  font-size: 14px;
+  font-family: var(--font-fmaily), serif;
+  font-weight: var(--font-weight-normal);
+  font-size: var(--font-size-default);
 }
