--- a/public/view/pi/sample02.html
+++ b/public/view/pi/sample02.html
@@ -9,13 +9,6 @@
   <link rel="stylesheet" href="/css/normalize.css"/>
   <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="/IBSheet8/css/gray/main.css">
-  <link rel="stylesheet" href="src/main.css"/>
-  <script type="module" src="src/components/components.ts"></script>
-  <script type="module" src="src/components/global-header.ts"></script>
-  <script type="module" src="src/components/global-nav-bar.ts"></script>
-  <script type="module" src="src/components/user-info.ts"></script>
-  <script type="module" src="src/components/global-menu-tree.ts"></script>
-  <script type="module" src="src/components/page-container.ts"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="/IBSheet8/ibsheet.js" type="text/javascript"></script>
   <script src="/IBSheet8/ibleaders.js"></script>
@@ -25,6 +18,9 @@
   <script src="/IBSheet8/plugins/ibsheet-dialog.js"></script>
   <script src="/scripts/lib.js"></script>
   <script src="/scripts/app.js"></script>
+  <script type="module" crossorigin src="/assets/main-uXe1DQw_.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/components-CdE0weD6.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-DR2LjIO-.css">
 </head>
 <body>
 <!-- global header -->
@@ -36,7 +32,7 @@
 <!-- lnb - menu tree -->
 <global-menu-tree></global-menu-tree>
 <!-- page content container:start -->
-<page-container title="실적명세서 조회"
+<page-container title="해외프로젝트 실적입력"
                 search="show" add="show" delete="show" excel="hide" save="show" print="disabled">
   <!-- page content:start -->
   <div id="gridContainer"></div>
