--- a/view/pi/layout01.html
+++ b/view/pi/layout01.html
@@ -5,10 +5,13 @@
   <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AA Archigroup</title>
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+  <link rel="preload" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <link rel="stylesheet" href="/css/normalize.css"/>
   <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="/IBSheet8/css/gray/main.css">
+  <link rel="stylesheet" href="../../src/main.css"/>
+  <script type="module" src="../../src/components/components.ts"></script>
+  <script type="module" src="../../src/layouts/layouts.ts"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="/IBSheet8/ibsheet.js" type="text/javascript"></script>
   <script src="/IBSheet8/ibleaders.js"></script>
@@ -18,9 +21,6 @@
   <script src="/IBSheet8/plugins/ibsheet-dialog.js"></script>
   <script src="/scripts/lib.js"></script>
   <script src="/scripts/app.js"></script>
-  <script type="module" crossorigin src="/assets/main-uXe1DQw_.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/components-CdE0weD6.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-DR2LjIO-.css">
 </head>
 <body>
 <!-- global header -->
@@ -32,10 +32,9 @@
 <!-- lnb - menu tree -->
 <global-menu-tree></global-menu-tree>
 <!-- page content container:start -->
-<page-container title="투입프로젝트현황"
-                search="show" add="show" delete="show" excel="hide" save="show" print="disabled">
+<page-container title="기본레이아웃"
+                search="show" add="show" delete="show" excel="show" save="show" print="show">
   <!-- page content:start -->
-  <div id="gridContainer"></div>
   <!-- page content:end -->
 </page-container>
 <!-- page content container:end -->
