--- a/src/main.css
+++ b/src/main.css
@@ -53,3 +53,34 @@ body.menu-opened global-menu-tree {
   color: var(--font-inverse);
   line-height: 20px;
 }
+
+.error-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+  flex-grow: 1;
+}
+
+.error-container > img {
+  margin-top: -100px;
+  margin-bottom: 43px;
+}
+
+.error-container > h2 {
+  margin: 0;
+  text-align: center;
+  font-size: 22px;
+  font-weight: var(--font-weight-bold);
+  color: var(--font-secondary);
+}
+
+.error-container > span {
+  display: block;
+  text-align: center;
+  margin: 16px 0 0 0;
+  font-size: 14px;
+  font-weight: 300;
+  color: var(--tertiary-color);
+}
