--- a/view/pi/layout01.html
+++ b/view/pi/layout01.html
@@ -35,6 +35,28 @@
 <page-container title="기본레이아웃"
                 search="show" add="show" delete="show" excel="show" save="show" print="show">
   <!-- page content:start -->
+  <script type="text/javascript">
+    const pageContainer = document.querySelector('page-container');
+
+    pageContainer.addEventListener('search', () => {
+      console.log('search button clicked:');
+    });
+    pageContainer.addEventListener('add', () => {
+      console.log('add button clicked:');
+    });
+    pageContainer.addEventListener('delete', () => {
+      console.log('delete button clicked:');
+    });
+    pageContainer.addEventListener('excel', () => {
+      console.log('excel button clicked:');
+    });
+    pageContainer.addEventListener('save', () => {
+      console.log('save button clicked:');
+    });
+    pageContainer.addEventListener('print', () => {
+      console.log('print button clicked:');
+    });
+  </script>
   <!-- page content:end -->
 </page-container>
 <!-- page content container:end -->
