--- a/src/main.css
+++ b/src/main.css
@@ -82,5 +82,6 @@ body.menu-opened global-menu-tree {
   margin: 16px 0 0 0;
   font-size: 14px;
   font-weight: 300;
+  line-height: 18px;
   color: var(--tertiary-color);
 }
