feat: ibsheet 사이즈 조정 기능에 너비 조정 기능 추가

--- a/view/pi/layout01.html
+++ b/view/pi/layout01.html
@@ -118,7 +118,7 @@
       var gridData = [];
 
       // 그리드 높이 창에 맞게 조정
-      gridUtil.fitHeight('grid', 'gridDiv');
+      gridUtil.fitSize('grid', 'gridDiv');
 
       // IBSheet8 객체 생성, 비동기
       IBSheet.create({
