doc: 그리드 너비 조정 관련 주석 수정

--- a/view/pi/layout02.html
+++ b/view/pi/layout02.html
@@ -137,7 +137,7 @@
       var gridData = [];
 
       // 그리드 높이 창에 맞게 조정
-      gridUtil.fitSize('grid1', 'gridDiv1', true); // false: 너비는 조정 안함
+      gridUtil.fitSize('grid1', 'gridDiv1', true); // true: 너비는 조정 안함
 
       // IBSheet8 객체 생성, 비동기
       IBSheet.create({
