--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,6 @@
 /* Global variables */
 :root {
-  --font-fmaily: Pretendard, Arial;
+  --font-family: Pretendard, Arial;
   --font-weight-normal: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
@@ -53,7 +53,7 @@ html {
 html, body {
   padding: 0;
   margin: 0;
-  font-family: var(--font-fmaily), serif;
+  font-family: var(--font-family), serif;
   font-weight: var(--font-weight-normal);
   font-size: var(--font-size-default);
 }
