--- a/src/login.css
+++ b/src/login.css
@@ -36,7 +36,7 @@ h1.login-ci > .login-slogan {
   color: rgba(255,255,255,0.8);
   display: block;
   font-size: 14px;
-  font-family: var(--font-fmaily), serif;
+  font-family: var(--font-family), serif;
   font-weight: var(--font-weight-normal);
   line-height: 22px;
 }
