feat: 세션 타이머 추가, 메뉴 트리 선택 색상 변경 #20

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -12,7 +12,7 @@
   --primary-color: #2f3136;
   --secondary-color: #5f6a76;
   --tertiary-color: #9ca5b1;
-  --select-color: #b40950;
+  --select-color: #1e52a0;
   --select-soft-color: #fff8fc;
   --surface-hover: #f7f9ff;
 
