--- a/src/main.css
+++ b/src/main.css
@@ -91,3 +91,16 @@ body.menu-opened global-menu-tree {
   display: flex;
   flex-grow: 1;
 }
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 8px;
+  gap: 6px;
+}
+
+aa-filter-box ~ .button-container {
+  margin-top: -8px;
+}
