fix: aa-filter-box 여백 조정 #30
close #30

--- a/view/pi/layout03.html
+++ b/view/pi/layout03.html
@@ -38,7 +38,7 @@
 
   <!-- filter box:start -->
   <aa-filter-box row="1" column="4">
-    <aa-filter-item label="아이디" row="1" column="1" required>
+    <aa-filter-item label="아이디" row="1" column="1" label-min-width="100" required>
       <aa-textbox id="userid" name="id" style="flex-grow: 2"></aa-textbox>
     </aa-filter-item>
     <aa-filter-item label="이름" row="1" column="2">
