feat: aa-date-picker 컴포넌트 추가 #16 #35 #39 #34 #33 #32 #24
close #16 #35 #39 #34 #33 #32 #24

--- a/view/pi/layout03.html
+++ b/view/pi/layout03.html
@@ -51,11 +51,8 @@
         <aa-dropdown-item value="3">디자인팀</aa-dropdown-item>
       </aa-dropdown>
     </aa-filter-item>
-    <aa-filter-item row="1" column="4">
-      <aa-radio-group name="position" value="1">
-        <aa-radio value="1">퇴사자 미포함</aa-radio>
-        <aa-radio value="2">퇴사자 포함</aa-radio>
-      </aa-radio-group>
+    <aa-filter-item label="입사일" row="1" column="4">
+      <aa-date-picker type="date" name="hiredate" style="flex-grow: 2"></aa-date-picker>
     </aa-filter-item>
   </aa-filter-box>
   <!-- filter box:end -->
